<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">X</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Log_In">Log In</string>
    <string name="Skip">Skip</string>
    <string name="Welcome_back">Welcome</string>
    <string name="Email">Email</string>
    <string name="Password">Password at least 8</string>
    <string name="CONTINUE">Continue</string>
    <string name="Do_not_Have_an_Account">Do not Have an account?</string>
    <string name="Forget_Password">Forget Password?</string>
    <string name="Name">Name</string>
    <string name="Dont_worry">Don\'t worry we just need your registered email address and it\'s done</string>
    <string name="Back">Back</string>
    <string name="XTeamAbout">X TEAM, 20 Khalil Hamada Street, Sidi Bishr, Alexandria, Egypt. \n \n

Our company was founded by young people passionate about programming as an important science of life sciences and a plant with its future fruitful harvest.\n \n
        The first building blocks of thisentity were developed in 2020, specifically in October. \n \n

We are a privately owned company with a management structure and an executive team. \n \n

The company looks forward to having a large number of young people in the Arab world capable of making progress for the Arab world by seeking the technological development that has been invading the world lately. \n \n

It is worth mentioning that we are targeting more than one side in information technology where there is a special programming sites and another side for advertising and a third side concerned with providing technology academically. \n \n

We can never be too much to talk about human fuel, which we cannot achieve successes and continue to develop without them ...  \n \n

Here we follow the policy of one for all and everyone for one. We are a family of developers, designers, trainers and marketers who work consistently to achieve efficiency and meet the standards that will be a source of bright future for our Arab country.\n \n

But if you think about why X TEAM?\n \n

Simply because we put ourselves in your place with the testimony of those who were already on X-Team, whether they were students or clients\n \n</string>
    <string name="Hello">Hello</string>
    <string name="Play_list_id">play list id</string>
    <string name="requests">Requests</string>
    <string name="watch">Watch</string>
    <string name="join">Join</string>
    <string name="Adv">Adveritsement</string>
    <string name="slide_to_cancel">"Slide to cancel"</string>
    <string name="app_info">"A WhatsApp style audio recording view to send voice notes in chat.\nHold the Mic to record, then slide left to cancel or swipe up to Lock and record.\n\nCredit:\nVarun John\nhttps://github.com/varunjohn\nvarunjohn1990@gmail.com"</string>
    <string name="type_a_message">Type a message</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="button_allow" tools:keep="@string/button_allow">Allow</string>
    <string name="button_deny" tools:keep="@string/button_deny">Deny</string>
    <string name="media">Media</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="content_privacy">
        PyChat only stores data needed to serve better service.
    </string>
    <string name="administration">com.doubleclick.x_course</string>
    <string name="confirm">Confirm</string>
    <string name="resend">Resend?</string>
    <string name="change_number">Change number?</string>
    <string name="verification_code">Verification Code</string>
    <string name="otp_sending">Sending otp</string>
    <string name="otp_verifying">Verifying otp</string>
    <string name="otp_verifying_msg">Verifying otp…</string>
    <string name="logging_in">Logging you in!</string>
    <string name="error_create_user">Something went wrong, unable to create user.</string>
    <string name="verification_cancel_title">Cancel verification</string>
    <string name="verification_cancel_message">Verification is in progress! do you want to cancel and go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="validation_req_country">Select country code!</string>
    <string name="validation_req_phone">Enter phone number!</string>
    <string name="validation_req_phone_valid">Enter a valid phone number</string>
    <string name="confirm_phone">One time password will be sent on this number! Continue with this number?</string>
    <string name="edit">Edit</string>
    <string name="hint_search">Search</string>
    <string name="tab_title_chat">Chats</string>
    <string name="tab_title_group">Groups</string>
    <string name="tab_title_call">Calls</string>
    <string name="invitation_share_title">Share using..</string>
    <string name="delete_chat_title">Delete chat</string>
    <string name="delete_chat_message">Continue deleting selected chats?</string>
    <string name="create_group">Create group</string>
    <string name="done">DONE</string>
    <string name="hint_group_name">Group name</string>
    <string name="group_info">Group info</string>
    <string name="short_description_of_group">Short description of group!</string>
    <string name="participants_0">Participants (0)</string>
    <string name="add_more">+ Add more</string>
    <string name="get_image_title">Get image from</string>
    <string name="get_image_camera">Camera</string>
    <string name="get_image_gallery">Gallery</string>
    <string name="validation_req_participant">No participants selected</string>
    <string name="validation_req_name">User name can\'t be empty</string>
    <string name="validation_req_description">Give this group a short description</string>
    <string name="err_upload_image">Unable to upload image.</string>
    <string name="group_created">Group created</string>
    <string name="error_request">Unable to process request at this time</string>
    <string name="hint_phone"> Phone Number</string>
</resources>