<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LogIn.SigninFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/Log_In"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/bigText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_Skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Skip"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/smallText"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:visibility="gone"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Hello"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/bigText"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/SignInprogressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="2dp"
        app:lottie_rawRes="@raw/loading2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_repeatCount="5"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:id="@+id/animationCalling"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:lottie_rawRes="@raw/welcome"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />
        <TextView
            android:visibility="gone"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/Welcome_back"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/bigText"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_r"
            android:text="@string/Back"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/bigText"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </LinearLayout>

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:background="@drawable/blue_frame"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/whiterGray"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginTop="@dimen/left_right_margin16"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:background="@drawable/blue_frame"
        android:hint="@string/Password"
        android:inputType="numberPassword"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/darkBlue"
        android:textColorHint="@color/whiterGray"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/left_right_margin32"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/left_right_margin32"
        android:background="@color/darkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/google"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_frame"
            android:padding="10dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/blue_frame"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_gravity="center"
            android:id="@+id/tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Forget_Password"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/smallText"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:gravity="end"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/tv_donthaveanAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Do_not_Have_an_Account"
            android:textAllCaps="false"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/smallText"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_forget_password" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-10dp"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="-100dp"
        android:cropToPadding="true"
        android:scaleType="center"
        android:scaleX="1"
        android:src="@drawable/bottom_shape"
        android:tint="@color/darkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseAppTint" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/CONTINUE"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>