<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/darkBlue"
    >

    <include
        layout="@layout/activity_splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:padding="32dp">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/countryCode"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/countryCodeDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/countryCode"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/countryCode"
            app:layout_constraintStart_toStartOf="@+id/countryCode"
            app:layout_constraintTop_toBottomOf="@+id/countryCode" />

        <EditText
            android:background="@null"
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/countryCodeDivider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/countryCode"
            app:layout_constraintStart_toStartOf="@+id/countryCode"
            app:layout_constraintTop_toBottomOf="@+id/countryCodeDivider" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/phoneNumber"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/submit"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/message_otp"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/phoneNumber"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/item_blue"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            android:text="@string/confirm"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
