<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogIn.SignupFragment"
    android:background="@color/darkBlue">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-120dp"
        android:cropToPadding="true"
        android:scaleType="center"
        android:scaleX="1"
        android:src="@drawable/top_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseAppTint" />

    <ImageView
        android:id="@+id/Back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:elevation="2dp"
        android:src="@drawable/backward_arrow_blue"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Sign Up"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/bigText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-120dp"
        android:cropToPadding="true"
        android:scaleType="center"
        android:scaleX="1"
        android:src="@drawable/bottom_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseAppTint" />

    <EditText
        android:inputType="textPersonName"
        android:id="@+id/et_Name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:background="@drawable/white_frame"
        android:hint="@string/Name"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/whiterGray"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:background="@drawable/white_frame"
        android:hint="@string/Email"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/whiterGray"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Name" />

    <com.airbnb.lottie.LottieAnimationView
        android:elevation="2dp"
        android:id="@+id/signupProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:lottie_rawRes="@raw/loading2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_repeatCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="numberPassword"
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:background="@drawable/white_frame"
        android:hint="@string/Password"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/whiterGray"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Email" />

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/et_Password">

        <ImageView
            android:id="@+id/google"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_frame"
            android:padding="10dp"
            android:src="@drawable/google" />

        <ImageView
            android:id="@+id/facebook"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/white_frame"
            android:src="@drawable/facebook" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_right_margin16"
        android:layout_marginEnd="@dimen/left_right_margin16"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/CONTINUE"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/et_Enter"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>